--- a/Fedora/Dockerfile
+++ b/Fedora/Dockerfile
@@ -8,7 +8,7 @@ RUN yum clean all
 
 ADD start-gluster.sh /
 
-CMD /bin/sh start-gluster.sh
+CMD /bin/bash start-gluster.sh
 
 
 EXPOSE 22 111 245 443 24007 2049 8080 6010 6011 6012 38465 38466 38468 38469 49152 49153 49154 49156 49157 49158 49159 49160 49161 49162
